--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "react-keplergl",
+  "name": "open_data",
   "version": "0.1.0",
   "private": true,
-  "author": "Jamie Sheriff",
-  "license": "GNU-A V3",
-  "homepage": "https://jamie-sherriff.github.io/react-keplergl",
   "dependencies": {
     "browserslist": "^4.6.3",
     "caniuse-lite": "^1.0.30000974",
     "connected-react-router": "git+https://github.com/supasate/connected-react-router.git",
+    "csv-parse": "^5.0.4",
+    "d3": "^7.4.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-utils": "^1.12.0",
     "gh-pages": "^2.0.1",
@@ -29,8 +28,8 @@
     "typescript": "^3.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
