--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "browserslist": "^4.6.3",
     "caniuse-lite": "^1.0.30000974",
     "connected-react-router": "git+https://github.com/supasate/connected-react-router.git",
@@ -14,9 +15,10 @@
     "global": "^4.4.0",
     "kepler.gl": "^1.1.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^16.8.6",
     "react-palm": "^3.1.2",
-    "react-redux": "^4.4.10",
+    "react-redux": "^7.1.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.0.1",
     "react-router-redux": "^4.0.8",
