--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "open_data",
+  "name": "London-Insiders",
   "version": "0.1.0",
+  "homepage": "https://copyninnja.github.io/London-Insiders",
   "private": true,
   "dependencies": {
     "bootstrap": "^5.1.3",
@@ -11,7 +12,7 @@
     "d3": "^7.4.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-utils": "^1.12.0",
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.2.0",
     "global": "^4.4.0",
     "kepler.gl": "^1.1.0",
     "react": "^16.8.6",
@@ -52,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
