--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "London-Insiders",
   "version": "0.1.0",
   "homepage": "https://copyninnja.github.io/London-Insiders",
-  "private": true,
+  "private": false,
   "dependencies": {
     "bootstrap": "^5.1.3",
     "browserslist": "^4.6.3",
